--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 
 <head>
-  <!-- HTMX -->
   <script src="https://unpkg.com/htmx.org@1.9.10"
     integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
     crossorigin="anonymous"></script>
-  <!-- HTMX Websockets extension https://htmx.org/extensions/web-sockets/ -->
   <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
-  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <meta charset="UTF-8">
@@ -26,7 +23,14 @@
 
     <form id="form" ws-send hx-reset-on-success>
       <input name="text" type="text" class="border-2 border-gray-300 p-2" placeholder="Type your message">
-      <button type="submit" class="bg-blue-500 text-white px-4 py-2">Send</button>
+      <button type="button"
+        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M1 5h12m0 0L9 1m4 4L9 9" />
+        </svg>
+        <span class="sr-only">Icon description</span>
+      </button>
     </form>
   </div>
 </body>
