--- a/templates/message.html
+++ b/templates/message.html
@@ -1,6 +1,14 @@
-<div id="chat_room" hx-swap-oob="beforeend">
-  <li id="message" class="flex  my-2">
-    <h1 class="text-base font-bold mr-2 text-red-500">{{ .ClientID }}: </h1>
-    <p class="text-base"> {{ .Text }}</p>
-  </li>
+<div id="chat_room" class="flex items-start gap-2.5 bm-12" hx-swap-oob="beforeend">
+  <div class="flex flex-col gap-1 w-full max-w-[320px]">
+    <div class="flex items-center space-x-2 rtl:space-x-reverse">
+      <span class="text-sm font-semibold text-gray-900 dark:text-gray-400">{{ .ClientID }}</span>
+      <span class="text-sm font-normal text-gray-500 dark:text-gray-400">11:46</span>
+    </div>
+    <div class="flex flex-col leading-1.5 p-4 border-gray-200 bg-gray-100 rounded-e-xl rounded-es-xl dark:bg-gray-700">
+      <p class="text-sm font-normal text-gray-900 dark:text-white">
+        {{ .Text }}
+      </p>
+    </div>
+    <span class="text-sm font-normal text-gray-500 dark:text-gray-400">Seen</span>
+  </div>
 </div>
