added something, some small updates and that's it

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,18 +20,16 @@
       <ul id="chat_room" hx-swap="beforeend" hx-swap-oob="beforeend">
       </ul>
     </div>
-
     <form id="form" ws-send hx-reset-on-success>
-      <input name="text" type="text" class="border-2 border-gray-300 p-2" placeholder="Type your message">
-      <button type="button"
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm p-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M1 5h12m0 0L9 1m4 4L9 9" />
-        </svg>
-        <span class="sr-only">Icon description</span>
-      </button>
+      <input name="text" type="text" class="block w-4/5 mx-auto p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Type your message">
     </form>
+    <script>
+      document.addEventListener('htmx:afterSwap', function(evt) {
+        if (evt.detail.target.matches('form')) {
+          document.getElementById('myInput').value = '';
+        }
+      });
+    </script>
   </div>
 </body>
 
